{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 79,
  "lineage": "8ffeab84-6beb-30d7-322d-e6685245af6d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3306",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-09-25T15:49:20.763-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/binkhmmpzhonaarr/global/firewalls/gcp-firewall-london",
            "log_config": [],
            "name": "gcp-firewall-london",
            "network": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/global/networks/gcp-vpc-london",
            "priority": 1000,
            "project": "binkhmmpzhonaarr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/global/firewalls/gcp-firewall-london",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "gcp-firewall"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/binkhmmpzhonaarr/global/networks/gcp-vpc-london",
            "mtu": 0,
            "name": "gcp-vpc-london",
            "project": "binkhmmpzhonaarr",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/global/networks/gcp-vpc-london"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-25T15:49:20.675-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/binkhmmpzhonaarr/global/firewalls/gcp-lb-london-vm-service",
            "log_config": [],
            "name": "gcp-lb-london-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/global/networks/gcp-vpc-london",
            "priority": 1000,
            "project": "binkhmmpzhonaarr",
            "self_link": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/global/firewalls/gcp-lb-london-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-lb-service"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-09-25T15:48:52.106-07:00",
            "id": "projects/binkhmmpzhonaarr/regions/europe-west2/forwardingRules/gcp-lb-london",
            "ip_address": "34.147.197.115",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "gcp-lb-london",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "binkhmmpzhonaarr",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/regions/europe-west2/forwardingRules/gcp-lb-london",
            "target": "https://www.googleapis.com/compute/v1/projects/binkhmmpzhonaarr/regions/europe-west2/targetPools/gcp-lb-london"
          },
          "dependencies": [
            "module.load_balancer.google_compute_http_health_check.default",
            "module.load_balancer.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}